--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <div class="logo"><img src="./assets/Hogwarts-Crest.png" alt="">
     </div>
 
+    <nav class="menu">
+        <ul>
+            <li>Alumnos</li>
+            <li>Profesores</li>
+            <li>Materias</li>
+        </ul>
+    </nav>
+
     <div class="head">
         <h1>Hogwarts Directory</h1>
 
