feat: se cambiaron estilos del menu y el tamaño de las imagenes

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <title>Hogwarts directory</title>
 </head>
+
 <body>
     <div class="logo"><img src="./assets/Hogwarts-Crest.png" alt="">
     </div>
 
     <nav class="menu">
-        <ul>
+        <h2><ul>
             <li>Alumnos</li>
             <li>Profesores</li>
             <li>Materias</li>
-        </ul>
+        </ul></h2>
     </nav>
 
     <div class="head">
@@ -28,7 +29,7 @@
         <main>
             <div class="container">
                 <form action="">
-                    <label for="character">Búsqueda de personaje</label>
+                    <h3><label for="character">Búsqueda de personaje</label></h3>
                     <input type="text" id="characterSearch" oninput="buscarElemento()" >
         
                 </form>
